[workspace]
resolver = "2"
members = [
    "crates/lineupper",
    "crates/multitool",
    "crates/shared",
    "crates/statter"
]

[workspace.package]
name = "bfc-multitool"
edition = "2021"
license = "MIT"
version = "1.1.0"

[workspace.dependencies]
anyhow = "1.0"
iced = { version = "0.14", features = ["image", "tokio", "sipper"] }
image = "0.25"
lineupper = { path = "crates/lineupper" }
multitool = { path = "crates/multitool" }
serde = { version = "1.0", features = ["derive"] }
shared = { path = "crates/shared" }
statter = { path = "crates/statter" }
strum = "0.28"
strum_macros = "0.28"
thiserror = "2.0"
tokio = { version = "1.52", features = ["fs", "io-util"] }
toml = "1.1"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 2
panic = "abort"
strip = "symbols"
