[package]
name = "lineupper"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common.workspace = true
iced.workspace = true
image.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
toml.workspace = true
