[package]
name = "multitool"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
anyhow.workspace = true
iced.workspace = true
image.workspace = true
lineupper.workspace = true
rfd = "0.17"
shared.workspace = true
statter.workspace = true
strum.workspace = true
strum_macros.workspace = true
