[package]
name = "statter"
edition.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common.workspace = true
iced.workspace = true
serde.workspace = true
strum_macros.workspace = true
tokio.workspace = true
toml.workspace = true
